project/modules/Security/11_app.tf
locals {
  backend_address_pool_name      = "hj-beap"
  frontend_port_name             = "hj-feport"
  frontend_ip_configuration_name = "hj-feip"
  http_setting_name              = "hj-be-htst"
  listener_name                  = "hj-httplstn"
  request_routing_rule_name      = "hj-rqrt"
  redirect_configuration_name    = "hj-rdrcfg"
}

resource "azurerm_application_gateway" "hj_appgw" {
  name                = "hj-appgw"
  resource_group_name = azurerm_resource_group.hj_rg.name
  location            = azurerm_resource_group.hj_rg.location

  sku {
    name     = "Standard_v2"
    tier     = "Standard_v2"
    capacity = 2
  }

  gateway_ip_configuration {
    name      = "hj-ip-app"
    subnet_id = azurerm_subnet.hj_sub_app.id
    
  }

  frontend_port {
    name = local.frontend_port_name
    port = 80
  }

  frontend_ip_configuration {
    name                 = local.frontend_ip_configuration_name
    public_ip_address_id = azurerm_public_ip.hj_pip_app.id
  }

  backend_address_pool {
    name = local.backend_address_pool_name
  }

  backend_http_settings {
    name                  = local.http_setting_name
    cookie_based_affinity = "Disabled"
    port                  = 80
    protocol              = "Http"
    request_timeout       = 60
  }

  http_listener {
    name                           = local.listener_name
    frontend_ip_configuration_name = local.frontend_ip_configuration_name
    frontend_port_name             = local.frontend_port_name
    protocol                       = "Http"
  }

  request_routing_rule {
    name                       = local.request_routing_rule_name
    priority                   = 9
    rule_type                  = "Basic"
    http_listener_name         = local.listener_name
    backend_address_pool_name  = local.backend_address_pool_name
    backend_http_settings_name = local.http_setting_name
  }
}

resource "azurerm_network_interface_application_gateway_backend_address_pool_association" "hj_asso_appbknd" {
  network_interface_id    = azurerm_network_interface.hj_nic_web.id
  ip_configuration_name   = "hj-ip-web"
  backend_address_pool_id = tolist(azurerm_application_gateway.hj_appgw.backend_address_pool).0.id
  depends_on = [ azurerm_network_interface.hj_nic_web ]
}
